Changed font to prevent overflowing
Changed font and increased number size.

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 }
 
 .total{
-    font-size: 40px;
+    font-size: 28px;
 }
 
 .currentInput{
